// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts: index contracts with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Contracts
    changeContractFilter={[Function]}
    contracts={
      Object {
        "Cloner": Array [
          Object {
            "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
            "createdAt": 1512480630000,
          },
          Object {
            "address": "2c6619f0418c2f191e2225091f7692363a91c336",
            "createdAt": 1512480770000,
          },
        ],
        "GreeterA": Array [
          Object {
            "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "createdAt": 1512481078000,
          },
        ],
        "GreeterB": Array [
          Object {
            "address": "GreeterA",
            "createdAt": 1512481078000,
          },
        ],
      }
    }
    fetchContracts={[Function]}
    filter=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <withRouter(Connect(Tour))
          finalStepSelector="#transactions"
          name="contracts"
          nextPage="transactions"
          steps={
            Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ]
          }
        />,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-3 text-left"
          >
            <h3>
              Contracts
            </h3>
          </div>
          <div
            className="col-sm-5 smd-pad-16"
          >
            <div
              className="pt-input-group pt-dark pt-large"
            >
              <span
                className="pt-icon pt-icon-search"
              />
              <input
                className="pt-input"
                dir="auto"
                onChange={[Function]}
                placeholder="Search contracts"
                type="search"
              />
            </div>
          </div>
          <div
            className="col-sm-4 text-right smd-pad-8"
          >
            <withRouter(Connect(ReduxForm)) />
          </div>
        </div>,
        Array [
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-12"
            >
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterA",
                  }
                }
              />
              <br />
            </div>
          </div>,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-12"
            >
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                        "createdAt": 1512480630000,
                      },
                      Object {
                        "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                        "createdAt": 1512480770000,
                      },
                    ],
                    "name": "Cloner",
                  }
                }
              />
              <br />
            </div>
          </div>,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-12"
            >
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "GreeterA",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterB",
                  }
                }
              />
              <br />
            </div>
          </div>,
        ],
      ],
      "className": "container-fluid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "finalStepSelector": "#transactions",
          "name": "contracts",
          "nextPage": "transactions",
          "steps": Array [
            Object {
              "isFixed": true,
              "position": "bottom",
              "selector": "#transactions",
              "text": "Scroll through all transactions launched from your Smart Contract.",
              "title": "View Transactions",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>,
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>,
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>,
          ],
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Contracts
              </h3>,
              "className": "col-sm-3 text-left",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Contracts",
              },
              "ref": null,
              "rendered": "Contracts",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>,
              "className": "col-sm-5 smd-pad-16",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="pt-icon pt-icon-search"
                  />,
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />,
                ],
                "className": "pt-input-group pt-dark pt-large",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-icon pt-icon-search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-input",
                    "dir": "auto",
                    "onChange": [Function],
                    "placeholder": "Search contracts",
                    "type": "search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withRouter(Connect(ReduxForm)) />,
              "className": "col-sm-4 text-right smd-pad-8",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "contract-card-0",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-sm-12"
          >
            <withRouter(Connect(ContractCard))
              contract={
                Object {
                  "contract": Array [
                    Object {
                      "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                      "createdAt": 1512481078000,
                    },
                  ],
                  "name": "GreeterA",
                }
              }
            />
            <br />
          </div>,
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterA",
                  }
                }
              />,
              <br />,
            ],
            "className": "col-sm-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "contract": Object {
                  "contract": Array [
                    Object {
                      "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                      "createdAt": 1512481078000,
                    },
                  ],
                  "name": "GreeterA",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "contract-card-1",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-sm-12"
          >
            <withRouter(Connect(ContractCard))
              contract={
                Object {
                  "contract": Array [
                    Object {
                      "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                      "createdAt": 1512480630000,
                    },
                    Object {
                      "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                      "createdAt": 1512480770000,
                    },
                  ],
                  "name": "Cloner",
                }
              }
            />
            <br />
          </div>,
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                        "createdAt": 1512480630000,
                      },
                      Object {
                        "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                        "createdAt": 1512480770000,
                      },
                    ],
                    "name": "Cloner",
                  }
                }
              />,
              <br />,
            ],
            "className": "col-sm-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "contract": Object {
                  "contract": Array [
                    Object {
                      "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                      "createdAt": 1512480630000,
                    },
                    Object {
                      "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                      "createdAt": 1512480770000,
                    },
                  ],
                  "name": "Cloner",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "contract-card-2",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-sm-12"
          >
            <withRouter(Connect(ContractCard))
              contract={
                Object {
                  "contract": Array [
                    Object {
                      "address": "GreeterA",
                      "createdAt": 1512481078000,
                    },
                  ],
                  "name": "GreeterB",
                }
              }
            />
            <br />
          </div>,
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "GreeterA",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterB",
                  }
                }
              />,
              <br />,
            ],
            "className": "col-sm-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "contract": Object {
                  "contract": Array [
                    Object {
                      "address": "GreeterA",
                      "createdAt": 1512481078000,
                    },
                  ],
                  "name": "GreeterB",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <withRouter(Connect(Tour))
            finalStepSelector="#transactions"
            name="contracts"
            nextPage="transactions"
            steps={
              Array [
                Object {
                  "isFixed": true,
                  "position": "bottom",
                  "selector": "#transactions",
                  "text": "Scroll through all transactions launched from your Smart Contract.",
                  "title": "View Transactions",
                },
              ]
            }
          />,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>
          </div>,
          Array [
            <div
              className="row pt-dark"
            >
              <div
                className="col-sm-12"
              >
                <withRouter(Connect(ContractCard))
                  contract={
                    Object {
                      "contract": Array [
                        Object {
                          "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                          "createdAt": 1512481078000,
                        },
                      ],
                      "name": "GreeterA",
                    }
                  }
                />
                <br />
              </div>
            </div>,
            <div
              className="row pt-dark"
            >
              <div
                className="col-sm-12"
              >
                <withRouter(Connect(ContractCard))
                  contract={
                    Object {
                      "contract": Array [
                        Object {
                          "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                          "createdAt": 1512480630000,
                        },
                        Object {
                          "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                          "createdAt": 1512480770000,
                        },
                      ],
                      "name": "Cloner",
                    }
                  }
                />
                <br />
              </div>
            </div>,
            <div
              className="row pt-dark"
            >
              <div
                className="col-sm-12"
              >
                <withRouter(Connect(ContractCard))
                  contract={
                    Object {
                      "contract": Array [
                        Object {
                          "address": "GreeterA",
                          "createdAt": 1512481078000,
                        },
                      ],
                      "name": "GreeterB",
                    }
                  }
                />
                <br />
              </div>
            </div>,
          ],
        ],
        "className": "container-fluid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "finalStepSelector": "#transactions",
            "name": "contracts",
            "nextPage": "transactions",
            "steps": Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-3 text-left"
              >
                <h3>
                  Contracts
                </h3>
              </div>,
              <div
                className="col-sm-5 smd-pad-16"
              >
                <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>
              </div>,
              <div
                className="col-sm-4 text-right smd-pad-8"
              >
                <withRouter(Connect(ReduxForm)) />
              </div>,
            ],
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Contracts
                </h3>,
                "className": "col-sm-3 text-left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Contracts",
                },
                "ref": null,
                "rendered": "Contracts",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>,
                "className": "col-sm-5 smd-pad-16",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="pt-icon pt-icon-search"
                    />,
                    <input
                      className="pt-input"
                      dir="auto"
                      onChange={[Function]}
                      placeholder="Search contracts"
                      type="search"
                    />,
                  ],
                  "className": "pt-input-group pt-dark pt-large",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-icon pt-icon-search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-input",
                      "dir": "auto",
                      "onChange": [Function],
                      "placeholder": "Search contracts",
                      "type": "search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withRouter(Connect(ReduxForm)) />,
                "className": "col-sm-4 text-right smd-pad-8",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "contract-card-0",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12"
            >
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterA",
                  }
                }
              />
              <br />
            </div>,
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withRouter(Connect(ContractCard))
                  contract={
                    Object {
                      "contract": Array [
                        Object {
                          "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                          "createdAt": 1512481078000,
                        },
                      ],
                      "name": "GreeterA",
                    }
                  }
                />,
                <br />,
              ],
              "className": "col-sm-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "contract": Object {
                    "contract": Array [
                      Object {
                        "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterA",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "contract-card-1",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12"
            >
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                        "createdAt": 1512480630000,
                      },
                      Object {
                        "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                        "createdAt": 1512480770000,
                      },
                    ],
                    "name": "Cloner",
                  }
                }
              />
              <br />
            </div>,
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withRouter(Connect(ContractCard))
                  contract={
                    Object {
                      "contract": Array [
                        Object {
                          "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                          "createdAt": 1512480630000,
                        },
                        Object {
                          "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                          "createdAt": 1512480770000,
                        },
                      ],
                      "name": "Cloner",
                    }
                  }
                />,
                <br />,
              ],
              "className": "col-sm-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "contract": Object {
                    "contract": Array [
                      Object {
                        "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
                        "createdAt": 1512480630000,
                      },
                      Object {
                        "address": "2c6619f0418c2f191e2225091f7692363a91c336",
                        "createdAt": 1512480770000,
                      },
                    ],
                    "name": "Cloner",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "contract-card-2",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12"
            >
              <withRouter(Connect(ContractCard))
                contract={
                  Object {
                    "contract": Array [
                      Object {
                        "address": "GreeterA",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterB",
                  }
                }
              />
              <br />
            </div>,
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withRouter(Connect(ContractCard))
                  contract={
                    Object {
                      "contract": Array [
                        Object {
                          "address": "GreeterA",
                          "createdAt": 1512481078000,
                        },
                      ],
                      "name": "GreeterB",
                    }
                  }
                />,
                <br />,
              ],
              "className": "col-sm-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "contract": Object {
                    "contract": Array [
                      Object {
                        "address": "GreeterA",
                        "createdAt": 1512481078000,
                      },
                    ],
                    "name": "GreeterB",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index filter with value 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Contracts
    changeContractFilter={[Function]}
    contracts={Object {}}
    fetchContracts={[Function]}
    filter="Greeter"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <withRouter(Connect(Tour))
          finalStepSelector="#transactions"
          name="contracts"
          nextPage="transactions"
          steps={
            Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ]
          }
        />,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-3 text-left"
          >
            <h3>
              Contracts
            </h3>
          </div>
          <div
            className="col-sm-5 smd-pad-16"
          >
            <div
              className="pt-input-group pt-dark pt-large"
            >
              <span
                className="pt-icon pt-icon-search"
              />
              <input
                className="pt-input"
                dir="auto"
                onChange={[Function]}
                placeholder="Search contracts"
                type="search"
              />
            </div>
          </div>
          <div
            className="col-sm-4 text-right smd-pad-8"
          >
            <withRouter(Connect(ReduxForm)) />
          </div>
        </div>,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-12"
          >
            <h4>
              No Contracts
            </h4>
            <h5>
              Upload a Contract to View State
            </h5>
            <br />
          </div>
        </div>,
      ],
      "className": "container-fluid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "finalStepSelector": "#transactions",
          "name": "contracts",
          "nextPage": "transactions",
          "steps": Array [
            Object {
              "isFixed": true,
              "position": "bottom",
              "selector": "#transactions",
              "text": "Scroll through all transactions launched from your Smart Contract.",
              "title": "View Transactions",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>,
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>,
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>,
          ],
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Contracts
              </h3>,
              "className": "col-sm-3 text-left",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Contracts",
              },
              "ref": null,
              "rendered": "Contracts",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>,
              "className": "col-sm-5 smd-pad-16",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="pt-icon pt-icon-search"
                  />,
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />,
                ],
                "className": "pt-input-group pt-dark pt-large",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-icon pt-icon-search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-input",
                    "dir": "auto",
                    "onChange": [Function],
                    "placeholder": "Search contracts",
                    "type": "search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withRouter(Connect(ReduxForm)) />,
              "className": "col-sm-4 text-right smd-pad-8",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "contract-card-",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-sm-12"
          >
            <h4>
              No Contracts
            </h4>
            <h5>
              Upload a Contract to View State
            </h5>
            <br />
          </div>,
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                No Contracts
              </h4>,
              <h5>
                Upload a Contract to View State
              </h5>,
              <br />,
            ],
            "className": "col-sm-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Contracts",
              },
              "ref": null,
              "rendered": "No Contracts",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Upload a Contract to View State",
              },
              "ref": null,
              "rendered": "Upload a Contract to View State",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <withRouter(Connect(Tour))
            finalStepSelector="#transactions"
            name="contracts"
            nextPage="transactions"
            steps={
              Array [
                Object {
                  "isFixed": true,
                  "position": "bottom",
                  "selector": "#transactions",
                  "text": "Scroll through all transactions launched from your Smart Contract.",
                  "title": "View Transactions",
                },
              ]
            }
          />,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>
          </div>,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-12"
            >
              <h4>
                No Contracts
              </h4>
              <h5>
                Upload a Contract to View State
              </h5>
              <br />
            </div>
          </div>,
        ],
        "className": "container-fluid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "finalStepSelector": "#transactions",
            "name": "contracts",
            "nextPage": "transactions",
            "steps": Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-3 text-left"
              >
                <h3>
                  Contracts
                </h3>
              </div>,
              <div
                className="col-sm-5 smd-pad-16"
              >
                <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>
              </div>,
              <div
                className="col-sm-4 text-right smd-pad-8"
              >
                <withRouter(Connect(ReduxForm)) />
              </div>,
            ],
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Contracts
                </h3>,
                "className": "col-sm-3 text-left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Contracts",
                },
                "ref": null,
                "rendered": "Contracts",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>,
                "className": "col-sm-5 smd-pad-16",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="pt-icon pt-icon-search"
                    />,
                    <input
                      className="pt-input"
                      dir="auto"
                      onChange={[Function]}
                      placeholder="Search contracts"
                      type="search"
                    />,
                  ],
                  "className": "pt-input-group pt-dark pt-large",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-icon pt-icon-search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-input",
                      "dir": "auto",
                      "onChange": [Function],
                      "placeholder": "Search contracts",
                      "type": "search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withRouter(Connect(ReduxForm)) />,
                "className": "col-sm-4 text-right smd-pad-8",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "contract-card-",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12"
            >
              <h4>
                No Contracts
              </h4>
              <h5>
                Upload a Contract to View State
              </h5>
              <br />
            </div>,
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  No Contracts
                </h4>,
                <h5>
                  Upload a Contract to View State
                </h5>,
                <br />,
              ],
              "className": "col-sm-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "No Contracts",
                },
                "ref": null,
                "rendered": "No Contracts",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Upload a Contract to View State",
                },
                "ref": null,
                "rendered": "Upload a Contract to View State",
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index mapStateToProps with default values 1`] = `
Object {
  "contracts": Object {
    "Cloner": Array [
      Object {
        "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
        "createdAt": 1512480630000,
      },
      Object {
        "address": "2c6619f0418c2f191e2225091f7692363a91c336",
        "createdAt": 1512480770000,
      },
    ],
    "GreeterA": Array [
      Object {
        "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
        "createdAt": 1512481078000,
      },
    ],
    "GreeterB": Array [
      Object {
        "address": "GreeterA",
        "createdAt": 1512481078000,
      },
    ],
  },
  "filter": "Time",
  "selectedChain": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
}
`;

exports[`Contracts: index render contracts with empty values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Contracts
    changeContractFilter={[Function]}
    contracts={Object {}}
    fetchContracts={[Function]}
    filter=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <withRouter(Connect(Tour))
          finalStepSelector="#transactions"
          name="contracts"
          nextPage="transactions"
          steps={
            Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ]
          }
        />,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-3 text-left"
          >
            <h3>
              Contracts
            </h3>
          </div>
          <div
            className="col-sm-5 smd-pad-16"
          >
            <div
              className="pt-input-group pt-dark pt-large"
            >
              <span
                className="pt-icon pt-icon-search"
              />
              <input
                className="pt-input"
                dir="auto"
                onChange={[Function]}
                placeholder="Search contracts"
                type="search"
              />
            </div>
          </div>
          <div
            className="col-sm-4 text-right smd-pad-8"
          >
            <withRouter(Connect(ReduxForm)) />
          </div>
        </div>,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-12"
          >
            <h4>
              No Contracts
            </h4>
            <h5>
              Upload a Contract to View State
            </h5>
            <br />
          </div>
        </div>,
      ],
      "className": "container-fluid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "finalStepSelector": "#transactions",
          "name": "contracts",
          "nextPage": "transactions",
          "steps": Array [
            Object {
              "isFixed": true,
              "position": "bottom",
              "selector": "#transactions",
              "text": "Scroll through all transactions launched from your Smart Contract.",
              "title": "View Transactions",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>,
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>,
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>,
          ],
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Contracts
              </h3>,
              "className": "col-sm-3 text-left",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Contracts",
              },
              "ref": null,
              "rendered": "Contracts",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>,
              "className": "col-sm-5 smd-pad-16",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="pt-icon pt-icon-search"
                  />,
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />,
                ],
                "className": "pt-input-group pt-dark pt-large",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-icon pt-icon-search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-input",
                    "dir": "auto",
                    "onChange": [Function],
                    "placeholder": "Search contracts",
                    "type": "search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withRouter(Connect(ReduxForm)) />,
              "className": "col-sm-4 text-right smd-pad-8",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "contract-card-",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-sm-12"
          >
            <h4>
              No Contracts
            </h4>
            <h5>
              Upload a Contract to View State
            </h5>
            <br />
          </div>,
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                No Contracts
              </h4>,
              <h5>
                Upload a Contract to View State
              </h5>,
              <br />,
            ],
            "className": "col-sm-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Contracts",
              },
              "ref": null,
              "rendered": "No Contracts",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Upload a Contract to View State",
              },
              "ref": null,
              "rendered": "Upload a Contract to View State",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <withRouter(Connect(Tour))
            finalStepSelector="#transactions"
            name="contracts"
            nextPage="transactions"
            steps={
              Array [
                Object {
                  "isFixed": true,
                  "position": "bottom",
                  "selector": "#transactions",
                  "text": "Scroll through all transactions launched from your Smart Contract.",
                  "title": "View Transactions",
                },
              ]
            }
          />,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>
          </div>,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-12"
            >
              <h4>
                No Contracts
              </h4>
              <h5>
                Upload a Contract to View State
              </h5>
              <br />
            </div>
          </div>,
        ],
        "className": "container-fluid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "finalStepSelector": "#transactions",
            "name": "contracts",
            "nextPage": "transactions",
            "steps": Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-3 text-left"
              >
                <h3>
                  Contracts
                </h3>
              </div>,
              <div
                className="col-sm-5 smd-pad-16"
              >
                <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>
              </div>,
              <div
                className="col-sm-4 text-right smd-pad-8"
              >
                <withRouter(Connect(ReduxForm)) />
              </div>,
            ],
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Contracts
                </h3>,
                "className": "col-sm-3 text-left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Contracts",
                },
                "ref": null,
                "rendered": "Contracts",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>,
                "className": "col-sm-5 smd-pad-16",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="pt-icon pt-icon-search"
                    />,
                    <input
                      className="pt-input"
                      dir="auto"
                      onChange={[Function]}
                      placeholder="Search contracts"
                      type="search"
                    />,
                  ],
                  "className": "pt-input-group pt-dark pt-large",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-icon pt-icon-search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-input",
                      "dir": "auto",
                      "onChange": [Function],
                      "placeholder": "Search contracts",
                      "type": "search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withRouter(Connect(ReduxForm)) />,
                "className": "col-sm-4 text-right smd-pad-8",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "contract-card-",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12"
            >
              <h4>
                No Contracts
              </h4>
              <h5>
                Upload a Contract to View State
              </h5>
              <br />
            </div>,
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  No Contracts
                </h4>,
                <h5>
                  Upload a Contract to View State
                </h5>,
                <br />,
              ],
              "className": "col-sm-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "No Contracts",
                },
                "ref": null,
                "rendered": "No Contracts",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Upload a Contract to View State",
                },
                "ref": null,
                "rendered": "Upload a Contract to View State",
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index render contracts with mocked values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Contracts
    changeContractFilter={[Function]}
    contracts={
      Object {
        "Cloner": Array [
          Object {
            "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
            "createdAt": 1512480630000,
          },
          Object {
            "address": "2c6619f0418c2f191e2225091f7692363a91c336",
            "createdAt": 1512480770000,
          },
        ],
        "GreeterA": Array [
          Object {
            "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "createdAt": 1512481078000,
          },
        ],
        "GreeterB": Array [
          Object {
            "address": "GreeterA",
            "createdAt": 1512481078000,
          },
        ],
      }
    }
    fetchContracts={[Function]}
    filter="Greeter"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <withRouter(Connect(Tour))
          finalStepSelector="#transactions"
          name="contracts"
          nextPage="transactions"
          steps={
            Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ]
          }
        />,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-3 text-left"
          >
            <h3>
              Contracts
            </h3>
          </div>
          <div
            className="col-sm-5 smd-pad-16"
          >
            <div
              className="pt-input-group pt-dark pt-large"
            >
              <span
                className="pt-icon pt-icon-search"
              />
              <input
                className="pt-input"
                dir="auto"
                onChange={[Function]}
                placeholder="Search contracts"
                type="search"
              />
            </div>
          </div>
          <div
            className="col-sm-4 text-right smd-pad-8"
          >
            <withRouter(Connect(ReduxForm)) />
          </div>
        </div>,
        <div
          className="row pt-dark"
        >
          <div
            className="col-sm-12"
          >
            <h4>
              No Contracts
            </h4>
            <h5>
              Upload a Contract to View State
            </h5>
            <br />
          </div>
        </div>,
      ],
      "className": "container-fluid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "finalStepSelector": "#transactions",
          "name": "contracts",
          "nextPage": "transactions",
          "steps": Array [
            Object {
              "isFixed": true,
              "position": "bottom",
              "selector": "#transactions",
              "text": "Scroll through all transactions launched from your Smart Contract.",
              "title": "View Transactions",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>,
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>,
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>,
          ],
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Contracts
              </h3>,
              "className": "col-sm-3 text-left",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Contracts",
              },
              "ref": null,
              "rendered": "Contracts",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>,
              "className": "col-sm-5 smd-pad-16",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="pt-icon pt-icon-search"
                  />,
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />,
                ],
                "className": "pt-input-group pt-dark pt-large",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-icon pt-icon-search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "pt-input",
                    "dir": "auto",
                    "onChange": [Function],
                    "placeholder": "Search contracts",
                    "type": "search",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withRouter(Connect(ReduxForm)) />,
              "className": "col-sm-4 text-right smd-pad-8",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "contract-card-",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-sm-12"
          >
            <h4>
              No Contracts
            </h4>
            <h5>
              Upload a Contract to View State
            </h5>
            <br />
          </div>,
          "className": "row pt-dark",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                No Contracts
              </h4>,
              <h5>
                Upload a Contract to View State
              </h5>,
              <br />,
            ],
            "className": "col-sm-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Contracts",
              },
              "ref": null,
              "rendered": "No Contracts",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Upload a Contract to View State",
              },
              "ref": null,
              "rendered": "Upload a Contract to View State",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <withRouter(Connect(Tour))
            finalStepSelector="#transactions"
            name="contracts"
            nextPage="transactions"
            steps={
              Array [
                Object {
                  "isFixed": true,
                  "position": "bottom",
                  "selector": "#transactions",
                  "text": "Scroll through all transactions launched from your Smart Contract.",
                  "title": "View Transactions",
                },
              ]
            }
          />,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-3 text-left"
            >
              <h3>
                Contracts
              </h3>
            </div>
            <div
              className="col-sm-5 smd-pad-16"
            >
              <div
                className="pt-input-group pt-dark pt-large"
              >
                <span
                  className="pt-icon pt-icon-search"
                />
                <input
                  className="pt-input"
                  dir="auto"
                  onChange={[Function]}
                  placeholder="Search contracts"
                  type="search"
                />
              </div>
            </div>
            <div
              className="col-sm-4 text-right smd-pad-8"
            >
              <withRouter(Connect(ReduxForm)) />
            </div>
          </div>,
          <div
            className="row pt-dark"
          >
            <div
              className="col-sm-12"
            >
              <h4>
                No Contracts
              </h4>
              <h5>
                Upload a Contract to View State
              </h5>
              <br />
            </div>
          </div>,
        ],
        "className": "container-fluid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "finalStepSelector": "#transactions",
            "name": "contracts",
            "nextPage": "transactions",
            "steps": Array [
              Object {
                "isFixed": true,
                "position": "bottom",
                "selector": "#transactions",
                "text": "Scroll through all transactions launched from your Smart Contract.",
                "title": "View Transactions",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-3 text-left"
              >
                <h3>
                  Contracts
                </h3>
              </div>,
              <div
                className="col-sm-5 smd-pad-16"
              >
                <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>
              </div>,
              <div
                className="col-sm-4 text-right smd-pad-8"
              >
                <withRouter(Connect(ReduxForm)) />
              </div>,
            ],
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Contracts
                </h3>,
                "className": "col-sm-3 text-left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Contracts",
                },
                "ref": null,
                "rendered": "Contracts",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-input-group pt-dark pt-large"
                >
                  <span
                    className="pt-icon pt-icon-search"
                  />
                  <input
                    className="pt-input"
                    dir="auto"
                    onChange={[Function]}
                    placeholder="Search contracts"
                    type="search"
                  />
                </div>,
                "className": "col-sm-5 smd-pad-16",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="pt-icon pt-icon-search"
                    />,
                    <input
                      className="pt-input"
                      dir="auto"
                      onChange={[Function]}
                      placeholder="Search contracts"
                      type="search"
                    />,
                  ],
                  "className": "pt-input-group pt-dark pt-large",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-icon pt-icon-search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "pt-input",
                      "dir": "auto",
                      "onChange": [Function],
                      "placeholder": "Search contracts",
                      "type": "search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withRouter(Connect(ReduxForm)) />,
                "className": "col-sm-4 text-right smd-pad-8",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "contract-card-",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12"
            >
              <h4>
                No Contracts
              </h4>
              <h5>
                Upload a Contract to View State
              </h5>
              <br />
            </div>,
            "className": "row pt-dark",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  No Contracts
                </h4>,
                <h5>
                  Upload a Contract to View State
                </h5>,
                <br />,
              ],
              "className": "col-sm-12",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "No Contracts",
                },
                "ref": null,
                "rendered": "No Contracts",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Upload a Contract to View State",
                },
                "ref": null,
                "rendered": "Upload a Contract to View State",
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index search contract input 1`] = `
Array [
  Array [
    "",
  ],
  Array [
    "update",
  ],
]
`;
